--- a/CSS/index.css
+++ b/CSS/index.css
@@ -852,13 +852,11 @@ body {
     display: grid;
     grid-template-columns: auto auto;
     /* background-color: #2196F3; */
-    padding: 10px;
-
     /* padding-left:140px; */
     /* text-align: center; */
     width: 53%;
     margin: 10px auto;
-    height:500px;
+    height:300px;
   }
   .grid-item {
     /* background-color: rgba(255, 255, 255, 0.8); */
@@ -915,12 +913,11 @@ body {
       grid-template-columns: auto;
       /* background-color: #2196F3; */
       padding: 0px;
-      /* width:80vw; */
+      width:80vw; 
       /* padding-left:140px; */
-      /* text-align: center; */
-      width: 60vw;
+      text-align: center; 
       /* margin: 10px auto; */
-      height:1000px;
+      height:700px;
     }
     .grid-item {
       /* background-color: rgba(255, 255, 255, 0.8); */
